coming soon page
this is the last push to main. continuing project on development branch

--- a/resume-angular/src/app/app.component.html
+++ b/resume-angular/src/app/app.component.html
@@ -1,4 +1,15 @@
-<mat-toolbar color="primary">
-  <mat-icon>desktop_windows</mat-icon>
-  <span>Michael Kasper</span>
-</mat-toolbar>
+<app-header></app-header>
+
+<div class="container">
+  <div class="row">
+    <div class="col"></div>
+    <div class="col">&nbsp;</div>
+    <div class="col"></div>
+  </div>
+  <div class="row">
+    <div class="col-2"></div>
+    <div class="col-8"><app-coming-soon></app-coming-soon></div>
+    <div class="col-2"></div>
+
+  </div>
+</div>
