--- a/resume-angular/src/app/app.component.html
+++ b/resume-angular/src/app/app.component.html
@@ -2,15 +2,10 @@
 
 <div class="container">
   <div class="row">
-    <div class="col"></div>
-    <div class="col">&nbsp;</div>
-    <div class="col"></div>
-  </div>
-  <div class="row">
     <div class="col-2"></div>
-    <div class="col-8"><router-outlet></router-outlet></div>
+    <div class="col-8">
+      <router-outlet></router-outlet>
+    </div>
     <div class="col-2"></div>
   </div>
-  
-  
 </div>
