--- a/resume-angular/src/app/header/header.component.html
+++ b/resume-angular/src/app/header/header.component.html
@@ -1,7 +1,6 @@
 <mat-toolbar color="primary">
     <mat-icon>computer</mat-icon>
-    <a routerLink="/home" routerLinkActive="active"><span class="headerpadding name-header">Michael Kasper</span></a>
+    <a routerLink='' routerLinkActive="active"><span class="headerpadding name-header">Michael Kasper</span></a>
     <span class="spacer"></span>
     <a routerLink="/projects" routerLinkActive="active" class="header-link">Projects</a>
-
   </mat-toolbar>
