--- a/resume-angular/src/app/app.component.html
+++ b/resume-angular/src/app/app.component.html
@@ -1,11 +1,7 @@
 <app-header></app-header>
 
-<div class="container">
+<div class="container-fluid">
   <div class="row">
-    <div class="col-2"></div>
-    <div class="col-8">
-      <router-outlet></router-outlet>
-    </div>
-    <div class="col-2"></div>
+    <router-outlet></router-outlet>
   </div>
 </div>
